# olx-ads-on-telegram

./: README.md  pyproject.toml
olx_ads_on_telegram/: helper.py  main.py  olx.py  search.py  telegram.py  vars.py
tests/: test_helper.py  test_olx.py  test_telegram.py
